--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -4,7 +4,7 @@
 <div class ="container">
 <div class="articles-saved">
   {{#each articles}}
-    <h2><a class="articles-link" href="{{this.articles.link}}">{{this.articles.title}}</a></h2>
+    <h2><a class="articles-link" href="{{this.link}}">{{this.title}}</a></h2>
   {{/each}}
 </div>
 </div>
