--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,6 +6,7 @@
   {{#each articles}}
     <h2><a class="articles-link" href="{{this.link}}">{{this.title}}</a></h2>
     <button type="button" class="btn btn-secondary btn-lg saved-btn" data-id="{{this._id}}">Save Article</button>
+    <h3 id= "button-gone"></h3>
   {{/each}}
 </div>
 </div>
