--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -6,6 +6,7 @@
   {{#each articles}}
     <h2><a class="articles-link" href="{{this.link}}">{{this.title}}</a></h2>
    <button type="button" class="btn btn-secondary btn-lg remove-btn" data-id="{{this._id}}">Remove Article</button>
+       <h3 id= "button-gone"></h3>
   {{/each}}
 </div>
 </div>
